# cmexl

./: .gitignore  README.md  cmexlconf_schema.json  go.mod  go.sum  main.go
cmd/: README.md  build.go  init.go  list.go  presets.go  root.go  sched_task.go  schedule.go
configs/: cmexlconf.json
pkg/: event_utility.go  get_presets.go  list_presets.go  localstore.go  presets_utility.go  schedule_presets.go  types_presets.go  viper_utility.go
templates/cmake_lib/: .gitignore.go.tmpl  CMakeLists.txt.go.tmpl  CMakeLists.txt.tmpl  CMakePresets.json  CMakePresets.json.go.tmpl  CMakePresets.json.tmpl  CMakeUserPresets.json.tmpl  LICENSE.md  README.md  README.md.go.tmpl  cmexl_bootstrap.bat.go.tmpl  cmexl_bootstrap.sh.go.tmpl  cmexlconf.json.go.tmpl  vcpkg-configuration.json  vcpkg.json
templates/cmake_lib/cmake/: DoobiusDefaults.cmake  DoobiusFeatures.cmake  DoobiusOptions.cmake  DoobiusVersionDetails.cmake  {{.LName}}_config.in.cmake  {{.LName}}_defaults.cmake  {{.LName}}_defaults.cmake.go.tmpl  {{.LName}}_features.cmake.go.tmpl  {{.LName}}_options.cmake.go.tmpl  {{.LName}}_packages.cmake.go.tmpl  {{.LName}}_settings_target.cmake  {{.LName}}_topo_sort.cmake  {{.LName}}_version.cmake  {{.LName}}_version.cmake.go.tmpl
templates/cmake_lib/cmake/comps/: {{.LName}}_math_deps.in.cmake
templates/cmake_lib/packaging/comps/: {{.LName}}_core_pack.cmake
templates/cmake_lib/src/: CMakeLists.txt  CMakeLists.txt.go.tmpl
templates/cmake_lib/src/comps/: {{.LName}}_build_core.cmake
templates/cmake_lib/src/math/: CMakeLists.txt.go.tmpl  add.h.go.tmpl
templates/cmake_lib/src/version/: CMakeLists.txt.go.tmpl  version.h.go.tmpl  version.in.cpp.go.tmpl
templates/cmake_lib/src/{{.LName}}/core/: print.cpp  print.h
templates/cmake_lib/src/{{.LName}}/math/: add.h
templates/cmake_lib/src/{{.LName}}/version/: {{.LName}}_version.h
templates/cmake_lib/src/{{.LName}}_version/: CMakeLists.txt.go.tmpl  {{.LName}}_version.in.cpp.go.tmpl
templates/cmake_lib/toolchains/: README.md  x64-linux-llvm-static-md.toolchain.cmake.go.tmpl  x64-linux-static-md.toolchain.cmake  x64-linux-static-md.toolchain.cmake.go.tmpl  x64-mingw64-linux-static-md.toolchain.cmake.go.tmpl  x86-linux-static-md.toolchain.cmake.go.tmpl  x86-mingw64-static-md.toolchain.cmake  x86-mingw64-static-md.toolchain.cmake.go.tmpl
templates/cmake_lib/triplets/: x86-linux-static-md.cmake
templates/cpp_app/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  cmexl_bootstrap.bat  cmexl_bootstrap.sh  cmexlconf.json  vcpkg.json
templates/cpp_app/cmake/: {{.LName}}_defaults.cmake  {{.LName}}_options.cmake
templates/cpp_app/packaging/: CMakeLists.txt
templates/cpp_app/presets/: clang.json  clangcl.json  gcc.json  linux_base.json  mingw.json  msvc.json  win_base.json
templates/cpp_app/src/: CMakeLists.txt
templates/cpp_app/src/app/client/: CMakeLists.txt  client.cpp
templates/cpp_app/src/app/server/: CMakeLists.txt  server.cpp
templates/cpp_app/src/{{.LName}}/core/: CMakeLists.txt  network.cpp  network.h
templates/cpp_app/toolchains/: x86-clang.cmake  x86-linux.cmake  x86-mingw.cmake
templates/cpp_app/triplets/: x64-clang-static-dyn-rt.cmake  x64-linux-static-dyn-rt.cmake  x64-mingw-static-dyn-rt.cmake  x86-linux-static-dyn-rt.cmake  x86-mingw-static-dyn-rt.cmake
templates/cpp_lib/: .gitignore  CMakeLists.txt  cmexl_bootstrap.bat  cmexl_bootstrap.sh  cmexlconf.json
templates/cpp_lib/cmake/: {{.LName}}_defaults.cmake  {{.LName}}_options.cmake
templates/cpp_lib/cmake/comps/: {{.LName}}_core_deps.in.cmake
templates/cpp_lib/packaging/: CMakeLists.txt  WELCOME.txt
templates/cpp_lib/packaging/comps/: {{.LName}}_math_pack.cmake
templates/cpp_lib/src/comps/: {{.LName}}_build_math.cmake
templates/cpp_lib/src/{{.LName}}/core/: CMakeLists.txt
templates/cpp_lib/src/{{.LName}}/math/: CMakeLists.txt  add.cpp  add_test.cpp  {{.LName}}_math_tests.cmake
templates/cpp_lib/src/{{.LName}}/version/: CMakeLists.txt  {{.LName}}_version.in.cpp
templates/cpp_lib/toolchains/: README.md  x64-linux-llvm-static-md.toolchain.cmake  x64-mingw64-static-md.toolchain.cmake  x86-linux-static-md.toolchain.cmake
templates/cpp_lib/triplets/: README.md
templates/vcpkg_common/: VcpkgPresets.json.go.tmpl  cmexl_bootstrap.bat.go.tmpl  cmexl_bootstrap.sh.go.tmpl  vcpkg.json.go.tmpl
templates/vcpkg_common/triplets/: README.md  x64-linux-llvm-static-md.cmake  x64-linux-llvm-static-md.toolchain.cmake  x64-linux-static-md.cmake  x64-linux-static-md.toolchain.cmake  x64-mingw64-linux-static-md.cmake  x64-mingw64-static-md.cmake  x64-mingw64-static-md.toolchain.cmake  x86-linux-static-md.cmake  x86-linux-static-md.toolchain.cmake  x86-mingw64-static-md.cmake  x86-mingw64-static-md.toolchain.cmake
